--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,37 +1,31 @@
 html,
 body {
-	padding: 0;
-	margin: 0;
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Fira Sans",
-		"Droid Sans",
-		"Helvetica Neue",
-		sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: var(--font-family);
+  color: var(--black);
+  background-color: var(--gray);
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-	html {
-		color-scheme: dark;
-	}
-
-	body {
-		background: black;
-		color: white;
-	}
+:root {
+  --black: #3b434e;
+  --white: #fff;
+  --primary: #7653fc;
+  --primary-hover: #9179ef;
+  --red: #de0000;
+  --green: #1dc37e;
+  --grin-light: #c8f8e4;
+  --gray: #e5e5e5;
+  --gray-light: #ebebeb;
+  --font-family: "Noto Sans KR", sans-serif;
 }
