--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -31,3 +31,22 @@
   color: var(--white);
   background-color: var(--primary);
 }
+
+.arrow {
+  display: inline-block;
+  margin-left: 10px;
+  fill: var(--black);
+}
+
+.down {
+  transform: rotate(90deg);
+  transition: all 0.2s;
+}
+
+.primary svg {
+  fill: var(--white);
+}
+
+.ghost:hover svg {
+  fill: var(--white);
+}
