--- a/Layout/Layout.module.css
+++ b/Layout/Layout.module.css
@@ -6,9 +6,9 @@
   min-height: 100vh;
   gap: 40px 30px;
   grid-template-areas:
-    ". header header ."
-    ". sidebar body ."
-    "footer footer footer footer";
+    '. header header .'
+    '. sidebar body .'
+    'footer footer footer footer';
 }
 
 .header {
@@ -31,9 +31,9 @@
   .wrapper {
     grid-template-columns: 1fr;
     grid-template-areas:
-      "header"
-      "body"
-      "footer";
+      'header'
+      'body'
+      'footer';
     gap: 10px;
   }
 
