--- a/Layout/Layout.module.css
+++ b/Layout/Layout.module.css
@@ -4,7 +4,7 @@
   grid-template-rows: auto 1fr auto;
 
   min-height: 100vh;
-  gap: 40px 30px;
+  gap: 33px 30px;
   grid-template-areas:
     '. header header .'
     '. sidebar body .'
@@ -12,6 +12,7 @@
 }
 
 .header {
+  display: none;
   grid-area: header;
 }
 
@@ -39,5 +40,9 @@
 
   .sidebar {
     display: none;
+  }
+
+  .body {
+    padding: 0 20px;
   }
 }
