--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,7 @@ a {
   --primary: #7653fc;
   --primary-hover: #9179ef;
   --red: #de0000;
+  --red-light: #fea291;
   --green: #1dc37e;
   --green-light: #c8f8e4;
   --gray: #e5e5e5;
