--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -10,8 +10,29 @@
   font-family: var(--font-family);
   font-size: 16px;
   line-height: 22px;
+  width: 100%;
 }
 
 .input::placeholder {
   color: var(--gray);
+}
+
+.invalid {
+  border: 2px solid var(--red);
+}
+
+.errorMessage {
+  color: var(--red);
+}
+
+.inputWrapper {
+  position: relative;
+}
+
+.errorMessage {
+  position: absolute;
+  bottom: -19px;
+  left: 0;
+
+  color: var(--red);
 }
