added colors ally

--- a/components/Menu/Menu.module.css
+++ b/components/Menu/Menu.module.css
@@ -1,74 +1,66 @@
-.firstLevelMenu {
-  padding: 0;
-  list-style: none;
-  color: var(--gray-dark);
-}
-
-.firstLevelMenuItem {
-  margin-bottom: 20px;
-}
-
-.firstLevelLink {
-  display: inline-grid;
-  grid-template-columns: 24px auto;
+.firstLevel {
+  display: grid;
+  grid-template-columns: 24px 1fr;
   gap: 20px;
-  font-size: 18px;
-  line-height: 24px;
+  align-items: center;
   font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  margin-top: 20px;
 }
 
-.firstLevelLinkActive,
-.firstLevelLink:hover {
+.firstLevelActive,
+.firstLevel:hover {
   color: var(--primary);
 }
 
-.firstLevelLinkActive svg,
-.firstLevelLink:hover svg {
+.firstLevelActive svg,
+.firstLevel:hover svg {
   fill: var(--primary);
 }
 
-.secondLevelMenu {
+.secondLevel {
+  margin-bottom: 10px;
+
+  cursor: pointer;
+  text-transform: uppercase;
+
+  color: var(--gray-dark);
+
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.secondBlock {
   margin-top: 15px;
-  padding-top: 5px;
-  padding-bottom: 10px;
-  list-style: none;
+  margin-left: 12px;
+  padding-left: 32px;
+
   border-left: 1px solid #dfdfdf;
 }
 
-.secondLevelMenuItem {
-  margin-top: 10px;
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 300;
-  text-transform: uppercase;
+.secondLevelBlock {
+  overflow: hidden;
 }
 
-.secondLevelMenuItem span {
-  cursor: pointer;
-}
-
-.thirdLevelMenu {
-  padding: 0;
-  list-style: none;
-  text-transform: none;
-  cursor: auto;
-}
-
-.thirdLevelMenuItem {
-  margin-top: 10px;
-}
-
-.thirdLevelMenuItem:last-child {
+.secondLevelBlockOpened:last-child {
   margin-bottom: 20px;
 }
 
-.thirdLevelLink {
+.thirdLevel {
+  margin-bottom: 10px;
+  display: block;
+
+  cursor: pointer;
+
+  color: var(--gray-dark);
+  font-weight: 500;
   font-size: 14px;
   line-height: 19px;
-  font-weight: 500;
 }
 
-.thirdLevelLinkActive,
-.thirdLevelLink:hover {
+.thirdLevelActive,
+.thirdLevel:hover {
   color: var(--primary);
 }
