--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,12 +20,12 @@ a {
 :root {
   --black: #3b434e;
   --white: #fff;
-  --primary: #7653fc;
+  --primary: #7351f5;
   --primary-hover: #9179ef;
   --red: #de0000;
   --red-light: #fea291;
-  --green: #1dc37e;
-  --green-light: #c8f8e4;
+  --green: #167950;
+  --green-light: #cef7e6;
   --gray: #e5e5e5;
   --gray-light: #ebebeb;
   --gray-dark: #787d85;
