--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -117,7 +117,7 @@
 }
 
 .advantages {
-  border-left: 2px solid var(--green);
+  border-left: 2px solid #1dc37e;
   padding-left: 15px;
   margin-bottom: 20px;
 }
@@ -151,17 +151,8 @@
   min-height: auto;
   background-color: #f9f8ff;
   text-align: left;
-}
-
-.reviewsClosed {
-  overflow: hidden;
-  max-height: 0;
-  padding: 0;
-}
-
-.reviewsOpened {
-  max-height: none;
   padding: 30px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1320px) {
